# KVList

./: LICENSE  README.md
src/: CMakeLists.txt  activityentry.cpp  activityentry.h  activitymodel.cpp  activitymodel.h  friendsentry.cpp  friendsentry.h  friendsmodel.cpp  friendsmodel.h  language_de_DE.ts  main.cpp  qml.qrc
src/libs/kvlist/: CMakeLists.txt  kvlistbase.h  kvlistentry.cpp  kvlistentry.h  kvlistmodel.h  kvlistserializer.cpp
src/libs/kvlist/include/: kvlistfilteredmodel.h  kvlistmodel.h
src/libs/kvlist/src/: kvlist_global.cpp  kvlist_global.h  kvlistfilteredmodel.cpp  kvlistmodel.cpp  kvlistserializer.h  kvlistserializerxml.cpp  kvlistserializerxml.h
src/qml/: Constants.qml  FriendsDetailView.qml  FriendsDetailViewEdit.qml  FriendsDetailViewEditForm.ui.qml  FriendsDetailViewForm.ui.qml  FriendsDetailsViewCall.qml  FriendsDetailsViewCallForm.ui.qml  FriendsDetailsViewInfo.qml  FriendsDetailsViewInfoForm.ui.qml  FriendsList.qml  FriendsListForm.ui.qml  FriendsListItem.qml  FriendsListItemForm.ui.qml  PageFriends.qml  main.qml
src/qml/widgets/: EditEntry.qml  NavigateButton.qml  RoundImage.qml
